--- a/platforms/documentation/docs/src/docs/userguide/authoring-builds/introduction/build_lifecycle_intermediate.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/authoring-builds/introduction/build_lifecycle_intermediate.adoc
@@ -114,4 +114,4 @@ image::task-dag-examples.png[]
 *Your build scripts and plugins are responsible for declaring this task dependency graph*, either explicitly via the <<tutorial_using_tasks.adoc#sec:task_dependencies,task dependency mechanism>> (e.g., `dependsOn`) or implicitly using <<incremental_build.adoc#sec:task_inputs_outputs,task annotation>> (e.g., by wiring task inputs and outputs).
 
 [.text-right]
-**Next Step:** <<writing_build_scripts.adoc#writing_build_scripts,Learn how to write Build Scripts>> >>
+**Next Step:** <<writing_build_scripts_intermediate.adoc#writing_build_scripts,Learn how to write Build Scripts>> >>
