--- a/platforms/documentation/docs/src/docs/userguide/authoring-plugins/getting_started_auth.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/authoring-plugins/getting_started_auth.adoc
@@ -33,14 +33,8 @@ _Reading time_: **35 minutes**
 
 This section covers:
 
-<<gradle_directories.adoc#gradle_directories,Part 1.>> Anatomy of a Gradle Build +
-<<into_multi_project_builds.adoc#intro_multi_project_builds,Part 2.>> Structuring Multi-Project Builds +
-<<build_lifecycle.adoc#build_lifecycle,Part 3.>> Gradle Build Lifecycle +
-<<writing_build_scripts.adoc#writing_build_scripts,Part 4.>> Writing Build Scripts +
-<<gradle_managed_types.adoc#gradle_types_intro,Part 5.>> Gradle Managed Types +
-<<dependencies.adoc#dependencies_intro,Part 6.>> Managing Dependencies +
-<<writing_tasks.adoc#writing_tasks,Part 7.>> Creating and Registering Tasks +
-<<plugins.adoc#using_plugins,Part 8.>> Working With Plugins +
+<<gradle_directories.adoc#gradle_directories,Part 1.>> Plugin Introduction +
+<<gradle_directories.adoc#gradle_directories,Part 2.>> Anatomy of a Plugin +
 
 [[plugin_tutorial]]
 == 2. Intermediate Gradle Tutorial
