--- a/platforms/documentation/docs/src/docs/userguide/running-builds/features/logging.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/running-builds/features/logging.adoc
@@ -281,7 +281,7 @@ include::{snippetsPath}/initScripts/customLogger/tests/customLogger.out[]
 Your logger can implement any of the listener interfaces listed below.
 When you register a logger, only the logging for the interfaces it implements is replaced.
 Logging for the other interfaces is left untouched.
-You can find out more about the listener interfaces in <<build_lifecycle.adoc#sec:build_phases,Build lifecycle events>>.
+You can find out more about the listener interfaces in <<build_lifecycle_intermediate.adoc#sec:build_phases,Build lifecycle events>>.
 
 * link:{javadocPath}/org/gradle/BuildListener.html[BuildListener]footnote:config_cache_incompat[Not compatible with the configuration cache.]
 * link:{javadocPath}/org/gradle/api/ProjectEvaluationListener.html[ProjectEvaluationListener]
