--- a/platforms/documentation/docs/src/docs/userguide/authoring-builds/tutorial/part7_writing_plugins.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/authoring-builds/tutorial/part7_writing_plugins.adoc
@@ -220,7 +220,7 @@ Congratulations, you have completed the tutorial!
 
 == Step 4. Next steps
 
-If you haven’t read the <<gradle_directories.adoc#gradle_directories,Beyond the Basics>> section yet, we recommend starting there to learn important mid-level topics.
+If you haven’t read the <<gradle_directories_intermediate.adoc#gradle_directories,Beyond the Basics>> section yet, we recommend starting there to learn important mid-level topics.
 
 Already comfortable with intermediate concepts? Great — you’re ready to move on to the advanced concepts next.
 
