--- a/platforms/documentation/docs/src/docs/userguide/best-practices/best_practices_tasks.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/best-practices/best_practices_tasks.adoc
@@ -286,7 +286,7 @@ include::{snippetsPath}/bestPractices/groupTasks-do/tests/groupTasks.good.out[]
 
 === References
 
-- <<writing_tasks.adoc#task_group_and_description,Task Group and Description>>
+- <<writing_tasks_intermediate.adoc#sec:task_groups,Task Group and Description>>
 
 === Tags
 
