--- a/platforms/documentation/docs/src/docs/userguide/dep-man/declaring-repositories/filtering_repository_content.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/dep-man/declaring-repositories/filtering_repository_content.adoc
@@ -65,7 +65,7 @@ See link:{javadocPath}/org/gradle/api/artifacts/repositories/InclusiveRepository
 
 [NOTE]
 ====
-If you leverage exclusive content filtering in the <<plugins.adoc#sec:custom_plugin_repositories,`pluginManagement` section of the `settings.gradle(.kts)`>>, it becomes illegal to add more repositories through the project `buildscript.repositories`.
+If you leverage exclusive content filtering in the <<plugins_intermediate.adoc#sec:custom_plugin_repositories,`pluginManagement` section of the `settings.gradle(.kts)`>>, it becomes illegal to add more repositories through the project `buildscript.repositories`.
 In that case, the build configuration will fail.
 
 Your options are either to declare all repositories in settings or to use non-exclusive content filtering.
