--- a/platforms/documentation/docs/src/docs/userguide/userguide_single.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/userguide_single.adoc
@@ -67,14 +67,14 @@ include::build_scans.adoc[leveloffset=+2]
 
 == CORE CONCEPTS
 
-include::gradle_directories.adoc[leveloffset=+2]
-include::intro_multi_project_builds.adoc[leveloffset=+2]
+include::gradle_directories_intermediate.adoc[leveloffset=+2]
+include::multi_project_builds_intermediate.adoc[leveloffset=+2]
 include::build_lifecycle_intermediate.adoc[leveloffset=+2]
 include::writing_settings_files.adoc[leveloffset=+2]
-include::writing_build_scripts.adoc[leveloffset=+2]
+include::writing_build_scripts_intermediate.adoc[leveloffset=+2]
 include::tutorial_using_tasks.adoc[leveloffset=+2]
-include::writing_tasks.adoc[leveloffset=+2]
-include::plugins.adoc[leveloffset=+2]
+include::writing_tasks_intermediate.adoc[leveloffset=+2]
+include::plugins_intermediate.adoc[leveloffset=+2]
 include::writing_plugins.adoc[leveloffset=+2]
 
 == GRADLE TYPES
