--- a/platforms/documentation/docs/src/docs/userguide/releases/upgrading/upgrading_version_9.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/releases/upgrading/upgrading_version_9.adoc
@@ -171,6 +171,18 @@ configurations.dependencyScope("implementation") {
 =====
 ====
 
+[[reporting_extension_file]]
+==== `ReportingExtension.file(String)` has been deprecated
+
+This link:{javadocPath}/org/gradle/api/reporting/ReportingExtension.html#file(String)[method] has been deprecated and will be removed in Gradle 10.0.0.
+
+Use `ReportingExtension.getBaseDirectory()` with `file(String)` or `dir(String)` instead.
+
+[[reporting_extension_api_doc_title]]
+==== `ReportingExtension.getApiDocTitle()` has been deprecated
+
+This link:{javadocPath}/org/gradle/api/reporting/ReportingExtension.html#getApiDocTitle()[method] has been deprecated and will be removed in Gradle 10.0.0. There is no direct replacement for this method.
+
 [[archives-configuration]]
 ==== Deprecation of the `archives` configuration
 The `archives` configuration added by the `base` plugin has been deprecated and will be removed in Gradle 10.0.0.
