--- a/platforms/documentation/docs/src/docs/userguide/dep-man/advanced/variant_aware_resolution.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/dep-man/advanced/variant_aware_resolution.adoc
@@ -368,17 +368,17 @@ If the _consumer_ requested `org.gradle.jvm.version=15`, Gradle could choose eit
 Gradle would then select the highest compatible version—Java 11.
 
 [[sec:secondary-variants]]
-== Secondary Variants
+== Secondary Variants (Secondary Artifact Sets)
 
 **Secondary variants** are *additional sets of artifacts* that a variant can expose, which do **not** participate in graph resolution.
 Instead, they are considered *only during artifact selection*.
 
-A secondary variants:
+A secondary variant:
 
 * Is an additional artifact set exposed by a configuration.
-* It has its own attributes, artifacts, and optionally capabilities.
-* It must be explicitly published (secondary variants are not usually published or declared in metadata).
-* It may be selected via an `ArtifactView` or `ArtifactResolutionQuery`, if the requested attributes match.
+* Has its own attributes and artifacts.
+* Is published automatically unless explicitly skipped.
+* May be selected during dependency resolution or by `ArtifactView` if the requested attributes match.
 
 Secondary variants are typically used to expose *precomputed transforms* of the main artifact like `.class` files extracted from a JAR, or the `resources` directory.
 
@@ -401,7 +401,7 @@ include::{snippetsPath}/dependencyManagement/customizingResolution-secondaryVari
 
 As shown in the output, in addition to its main artifact (`some-library-1.2.3.jar`), `apiElements` also exposes a **secondary variant** named `classes`, which provides the compiled class files as a `java-classes-directory`.
 
-This `classes` secondary variant does not influence which component is selected during graph resolution, but it gives Gradle more flexibility during artifact selection—for example, enabling consumers to use unjarred class files for faster access in IDEs or incremental compilation.
+This `classes` secondary variant does not influence which component is selected during graph resolution, but it gives Gradle more flexibility during artifact selection — for example, enabling consumers to use unjarred class files for faster access in IDEs or incremental compilation.
 
 Let's create a secondary variant of our Java library:
 
